fix: Fix image overlapping in ranking page

--- a/src/components/UI/Point/Point.module.css
+++ b/src/components/UI/Point/Point.module.css
@@ -9,6 +9,7 @@
     font-size: 2rem;
     font-weight: 600;
     margin: 10px auto;
+    margin-top: 9rem;
 
     background: linear-gradient(
         180.34deg,
